# Halogen-Hackathon

./: .gitignore  CLAUDE.md  VISUALIZATION_README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: debug-specialist.md  diagnostics-specialist.md  documentation-specialist.md  research-analyst.md  test-runner.md  ticket-implementation.md  ticket-review-test-analyzer.md
.claude/commands/: agent-implement.md  debug-failure.md  implement-ticket.md  resolve-tests.md  review-test.md
.claude/templates/: compliance_matrix.json.template  context.json.template
data/: tasks.csv
data/processed/: test.csv  train.csv
models/: task1_baseline_model.pkl  task2_baseline_model.pkl
models_backup/: task1_cnn_model.pt  task2_cnn_model.pt
notebooks/: 01_data_exploration.ipynb  02_lesion_analysis.ipynb  03_treatment_response.ipynb  04_data_validation.ipynb
scripts/: comprehensive_evaluation.py  evaluate_models.py  generate_cnn_maps.py  prepare_data.py  train_atlas_models.py  train_baseline_models.py  train_cnn_models.py  train_multitask_cnn.py
src/: README.md  __init__.py  analysis_dashboard.py  app.py  tasks.py  visualization.py
src/holothon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/data/: test_loader.py
tests/features/: __init__.py  test_atlas.py  test_voxel.py
tests/models/: test_cnn.py  test_explanability.py  test_loss.py  test_torch_loader.py
tests/scripts/: test_evaluate_models.py  test_generate_cnn_maps.py  test_train_atlas_models.py  test_train_baseline_models.py  test_train_cnn.py  test_train_multitask_cnn.py
tickets/: 1 - Setup.md  2 - Baseline.md  3 - Atlas.md  4 - CNN.md  4.1 - Alignment.md  4.2 - Alignment 2.md  4.3 - Evaluate.md  5 - CNN Effect.md  6 - CNN Visualiser.md  7 - Memory Efficiency.md
(+14 files in other folders)
