[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
version = '0.1.0'
name = 'holothon'
dependencies = [
    "tqdm",
    "nibabel",
    "pandas",
    "joblib",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "nilearn",
    "ipywidgets",
    "seaborn",
    "streamlit",
    "dash",
    "scipy"
]
